<?xml version="1.0"?>
<package format="2">
  <name>srcp2_main</name>
  <version>0.0.0</version>
  <description>The srcp2_main package</description>

  <maintainer email="fnivek@gmail.com">Kevin French</maintainer>
  <license>TODO</license>
  <author email="fnivek@gmail.com">Kevin French</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>srcp2_main_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
